--- a/static/description/index.html
+++ b/static/description/index.html
@@ -33,17 +33,17 @@
     </div>
 </section>
 
-<section id="screenshots" class="image-section" style="text-align: center; padding: 100px 20px; margin-bottom: 40px;">
+<section id="screenshots" class="image-section" style="text-align: center; padding: 100px 20px; margin-bottom: 10px;">
     <div class="container">
-        <h2 style="font-weight: 700; margin-bottom: 40px;">Module Screenshots</h2>
+        <h2 style="font-size: 3rem; font-weight: 700; margin-bottom: 40px;">Example of the module</h2>
         <div class="row justify-content-center">
             <div class="col-md-6 mb-4">
                 <img src="/activity_comment/static/description/assets/test.png" alt="Activity Comments Screenshot 1" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <p class="mt-3">Activity Comments Interface</p>
+                <h3 class="mt-3" style="font-size: 1.25rem; font-weight: 400;">Activity Comments Interface</h3>
             </div>
             <div class="col-md-6 mb-4">
                 <img src="/activity_comment/static/description/assets/image-2.png" alt="Activity Comments Screenshot 2" style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-                <p class="mt-3">Comment Management</p>
+                <h3 class="mt-3" style="font-size: 1.25rem; font-weight: 400;">Comment Management</h3>
             </div>
         </div>
     </div>
@@ -68,7 +68,7 @@
 
 <section id="compatibility" class="my-5">
     <h2 style="font-weight: 700;">Compatibility</h2>
-    <p>Odoo version: 18.0</p>
+    <p>Odoo version: 17.0</p>
 </section>
 
 <section id="license" class="my-5">
